added pagination and filtering